Add text elements for main features

--- a/wiki.html
+++ b/wiki.html
@@ -9,39 +9,98 @@
 <body>
   <div class="container">
 
-  <div class="jumbotron">
-  <div class="well">
   <div class="welcome">
+  <div class="well">
+  <div class="row">
+
+  <div class="col-md-6">
     <h1>Welcome to Wikipedia,</h1>
     <p>the free encyclopedia that anyone can edit.</p>
     <p>5,402,462 articles in English</p>
+  </div>
 
-    <div class="row">
-    <div class="col-sm-4">
+  <div class="col-md-2">
+    <ul>
+      <li>Arts</li>
+      <li>Biography</li>
+      <li>Geography</li>
+    </ul>
+  </div>
+
+  <div class="col-md-2">
+    <ul>
+      <li>History</li>
+      <li>Mathematics</li>
+      <li>Science</li>
+    </ul>
+  </div>
+
+  <div class="col-md-2">
+    <ul>
+      <li>Society</li>
+      <li>Technology</li>
+      <li>All Portals</li>
+    </ul>
+  </div>
+
+  </div>
+  </div>
+  </div>
+
+  <div class="row">
+  <div class="well">
+  <div class="bg-success">
+  <div class="col-md-6">
+    <div class="feature">
+      <h2><strong>From today's featured article</strong></h2>
+      <p>The Belgian national football team has represented Belgium in association football since their maiden match in 1904. The squad is supervised by the Royal Belgian Football Association, stands under the global jurisdiction of FIFA and is governed in Europe by UEFA. Most of their home games are played at the King Baudouin Stadium in Brussels. The squad has been known as the Red Devils since 1906; its fan club is named "1895". Belgium has long-standing football rivalries with its Dutch and French counterparts, having played both teams nearly every year from 1905 to 1967. Periods of regular Belgian representation at the highest international level, from 1920 to 1938, and 1970 to 2002, have alternated with mostly unsuccessful qualification rounds. The national team played in three Olympic football tournaments, including the one in 1920, which they won. They achieved victories over four reigning world champions—West Germany, Brazil, Argentina and France—between 1954 and 2002. Belgium topped the FIFA World Rankings for the first time in November 2015. They are competing in the European qualifiers for the 2018 World Cup, which will run until October 2017. (Full article...)</p>
+    </div>
+
+    <div class="know">
+      <h2><strong>Did you know...</strong></h2>
       <ul>
-        <li>Arts</li>
-        <li>Biography</li>
-        <li>Geography</li>
+        <li>... that the flag of Weihaiwei (pictured) was redesigned to include Mandarin ducks, as it was felt inappropriate to have a Chinese imperial dragon on a British flag?</li>
+        <li>... that the lascivious lyrics of The Band's "Jemima Surrender" inspired Naomi Weisstein to form the Chicago Women's Liberation Rock Band?</li>
+        <li>... that Anne Penfold Street, one of Australia's leading mathematicians, earned bachelor's and master's degrees in chemistry before switching to mathematics?</li>
+        <li>... that the Guatemalan labor organization Committee for Peasant Unity once led a strike that forced a minimum wage increase of nearly 200%?</li>
+        <li>... that French singer-songwriter Indila, who has described herself as a "child of the world", is of Algerian, Cambodian, Egyptian, and Indian descent?</li>
+        <li>... that the Kurşunlu Mosque and Complex hosts a museum that exhibits handmade meerschaum pipes?</li>
+        <li>... that E. S. Raja Gopal held the position of a CSIR emeritus scientist at both the National Physical Laboratory of India and the Indian Institute of Science?</li>
+        <li>... that in 2007, the Pennsylvania Supreme Court ruled that a sperm donor was not obligated to pay child support?</li>
       </ul>
     </div>
-    </div>
+  </div>
+  </div>
+  </div>
+  </div>
 
-    <div class="row">
-    <div class="col-sm-4">
+  <div class="row">
+  <div class="well">
+  <div class="bg-info">
+  <div class="col-md-6">
+    <div class="news">
+      <h2><strong>In the news</strong></h2>
       <ul>
-        <li>History</li>
-        <li>Mathematics</li>
-        <li>Science</li>
+        <li>In the French presidential election, Emmanuel Macron (pictured) defeats Marine Le Pen to become the next President of France.</li>
+        <li>In horse racing, Always Dreaming, ridden by jockey John Velazquez, wins the Kentucky Derby.</li>
+        <li>A border clash between Afghanistan and Pakistan results in military and civilian deaths on both sides.</li>
+        <li>The maiden flight of the Chinese Comac C919 airliner takes place.</li>
+        <li>Puerto Rico files for debt restructuring, the largest ever de facto governmental bankruptcy in the United States.</li>
+        <li>Mark Selby defeats John Higgins to win the World Snooker Championship.</li>
       </ul>
     </div>
-    </div>
 
+    <div class="day">
+      <h2><strong>On this day...</strong></h2>
+      <p>May 11</p>
       <ul>
-        <li>Society<li>
-        <li>Technology</li>
-        <li>All Portals<li>
-      </ul>
-      
+        <li>1745 – War of the Austrian Succession: French forces defeated the Anglo-Dutch-Hanoverian "Pragmatic Army" at the Battle of Fontenoy in the Austrian Netherlands in present-day Belgium.</li>
+        <li>1812 – Spencer Perceval became the only British Prime Minister to be assassinated when he was shot in the lobby of the House of Commons.</li>
+        <li>1894 – In response to a 28 percent wage cut, 4,000 Pullman Palace Car Company workers went on strike in Illinois, bringing rail traffic west of Chicago to a halt.</li>
+        <li>1985 – During an association football match between Bradford City and Lincoln City in Bradford, England, a flash fire consumed one side of the Valley Parade stadium, killing 56 attendees.</li>
+        <li>997 – Deep Blue (pictured) became the first computer to win a match against a world chess champion, when it defeated Garry Kasparov in six games.</li>  
+    </div>
+  </div>
   </div>
   </div>
   </div>
